--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,6 @@
   color: white;
   font-weight: bold;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
 
 .carousel-caption h2 {
@@ -12,7 +11,7 @@
 }
 
 .carousel-item.item1 {
-  height: 100vh;
+  height: calc(100vh - 56px);
   min-height: 300px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
@@ -23,7 +22,7 @@
 }
 
 .carousel-item.item2 {
-  height: 100vh;
+  height: calc(100vh - 56px);
   min-height: 300px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
